--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write \"src/**/*.{vue,ts,js,scss}\""
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/outfit": "^5.2.8",
+    "devicon": "^2.17.0",
     "pinia": "^3.0.4",
     "sass": "^1.97.3",
     "vue": "^3.5.25"
