--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
     "@fontsource/outfit": "^5.2.8",
-    "devicon": "^2.17.0",
     "pinia": "^3.0.4",
     "sass": "^1.97.3",
     "vue": "^3.5.25"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
+    "@iconify-json/logos": "^1.2.10",
+    "@iconify-json/twemoji": "^1.2.5",
+    "@iconify-json/vscode-icons": "^1.2.43",
     "@stylistic/eslint-plugin": "^5.9.0",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.4",
@@ -38,6 +40,8 @@
     "stylelint-config-standard-scss": "^17.0.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.56.0",
+    "unplugin-icons": "^23.0.1",
+    "unplugin-vue-components": "^31.0.0",
     "vite": "^7.3.1",
     "vue-tsc": "^3.2.5"
   }
